k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monblog
  namespace: mvc-procedural
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monblog
  template:
    metadata:
      labels:
        app: monblog
    spec:
      containers:
      - name: web
        image: monblog:mvc-procedural
        imagePullPolicy: Never
        ports:
        - containerPort: 80
