k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monblog-service
  namespace: mvc-objet
spec:
  selector:
    app: monblog
  ports:
    - port: 80
      targetPort: 80
