k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: mvc-simple
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
