k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monblog-ingress
  namespace: mvc-simple
spec:
  rules:
  - host: mvcsimple.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monblog-service
            port:
              number: 80
